set fixed height for input and select fix dark mode auto detection

--- a/src/app/components/todo-filter/todo-filter.component.css
+++ b/src/app/components/todo-filter/todo-filter.component.css
@@ -27,3 +27,8 @@ select {
   font-size: 12px;
   margin-bottom: 4px;
 }
+
+select,
+input {
+  height: 40px;
+}
