--- a/src/app/components/todo-sorting/todo-sorting.component.css
+++ b/src/app/components/todo-sorting/todo-sorting.component.css
@@ -2,13 +2,15 @@
   display: flex;
   flex-direction: column;
 }
+
 label {
   font-size: 12px;
+  margin-bottom: 4px;
 }
 
 select {
+  height: 40px;
   font-size: 16px;
-  margin-top: 4px;
   padding: 8px;
   border: 1px solid black;
   border-radius: 8px;
